tests/baselines/reference/aliasInaccessibleModule.errors.txt
tests/cases/compiler/aliasInaccessibleModule.ts(4,23): error TS4000: Import declaration 'X' references inaccessible name 'N'.


==== tests/cases/compiler/aliasInaccessibleModule.ts (1 errors) ====
    module M {
        module N {
        }
        export import X = N;
                          ~
!!! error TS4000: Import declaration 'X' references inaccessible name 'N'.
    }